added the text to the about page and created things to change file to track notes and ideas

--- a/style.css
+++ b/style.css
@@ -406,8 +406,39 @@ select {
 }
 
 /* About */
+
+#band-description {
+    margin: 20px;
+}
+
 #band-members {
     padding-top: 10px;
+}
+
+.item > p {
+    padding: 6px 0px;
+}
+
+.item > h3 {
+    padding-top: 10px;
+}
+
+.role {
+    color: rgba(80, 80, 80, 0.836);
+    font-size: 14px;
+}
+
+.item .about-button{
+    background-color: #e7e7e7; 
+    color: black;
+}
+
+.item .about-button:hover {
+    background-color: #b0b0b0;
+}
+
+#band-met {
+    margin: 20px;
 }
 
 /* Contact */
