has frq, updated about pg, and better formatting

--- a/about.css
+++ b/about.css
@@ -2,7 +2,7 @@
 
 #band-description {
     margin: 20px;
-    background-image: url(./assets/images/Carousel\ 1.jpg);
+    background-image: url(./assets/images/carousel2.png);
     background-size: 50%;
     
 }
@@ -41,3 +41,4 @@
 #band-met {
     margin: 20px;
 }
+
