--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ header {
 .carousel {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 90%;
     animation: slide 20s infinite;
 }
 
@@ -475,20 +475,17 @@ header {
 }
 
 .item1 {
-    background-image: url('https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+    background-image: url('fullBand.png');
 }
 
 .item2 {
-    background-image: url('https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=519&q=80');
-}
+    background-image: url('fullBand2.png');}
 
 .item3 {
-    background-image: url('https://images.unsplash.com/photo-1536697246787-1f7ae568d89a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHNwYWNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60');
-}
+    background-image: url('fullBand3.png');}
 
 .item4 {
-    background-image: url('https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8QUl8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
-}
+    background-image: url('fullBand4.png');}
 
 .content {
     position: absolute;
