--- a/profiles.css
+++ b/profiles.css
@@ -1,32 +1,74 @@
 body {
-    background-color: rgb(201, 229, 249);
+    background-color: black;
+    /* color: white; */
+}
+
+.flexbox {
+    display: flex;
 }
 
 img {
     height: 200px;
     width: 200px;
-    border-radius: 50%;
+    margin-bottom: 10px;
 }
 
-img, p {
-    padding: 0px 10px 0px 10px;
+div > .images, .text{
+    /* background-color: rgb(237, 237, 237); */
+    /* background-color: rgb(104, 101, 101); */
+    /* background-color: rgb(117, 109, 103); */
+    background-color: rgb(186, 175, 167);
+    transition: transform 0.3s;
 }
 
-.right-image {
-    float: left;
+.images:hover, .text:hover {
+    transform: translateY(-10px);
 }
 
-.left-image {
-    float: right;
-    
+.images {
+    width: 200px;
+    padding: 20px 20px 10px 20px;
+    margin: 20px;
 }
 
-p {
-    background-color: #aed7f1;
-
+.text {
+    padding: 20px;
+    padding-top: 0px;
+    margin: 20px;
+    height: 660px;
 }
 
 span {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
+    /* font-style: italic; */
 }
+
+@media (max-width: 805px) {
+    .flexbox {
+        flex-direction: column;
+    }
+
+    img {
+        height: 100px;
+        width: 100px; 
+        margin-bottom: 0px;
+    }
+
+    .images {
+        display: flex;
+        padding: 20px 20px 15px 20px;
+        width: auto;
+        margin: auto;
+    }
+
+    .row {
+        flex: 33.33%;
+        padding: 5px;
+    }
+
+    .text {
+        height: auto;
+    }
+}
+
