--- a/css/about.css
+++ b/css/about.css
@@ -8,7 +8,7 @@
     padding: 10px 13px 35px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    background-image: url(./assets/images/carousel2.png);
+    background-image: url(../assets/images/band-desc-bg.png);
     background-size: cover;
     background-position: center;
 }
