--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,11 @@ select {
 
 
 /* Tour Section Styling */
+.tour-container > .pg-name {
+    padding: 20px;
+    margin-top: 50px;
+}
+
 .tour-section {
     padding: 40px 20px;
     background-color: #f5f5f5;
@@ -677,6 +682,10 @@ header a:hover {
     padding-top: 10px;
 }
 
+.merch-section .pg-name {
+    margin-top: 90px;
+}
+
 /* Footer */
 footer {
     background-color: #000;
@@ -787,6 +796,17 @@ footer {
     font-weight: 300;
     margin: 1.5em 0; /* Reduced margin */
   }
+
+  .accordion-content a {
+    color: #03b5d2;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.accordion-content a:hover {
+    text-decoration: underline;
+}
+
   
 .nav-logo img {
     height: 60px; /* Adjust logo size */
