--- a/css/about.css
+++ b/css/about.css
@@ -10,10 +10,10 @@
 #band-description{
     background-color: rgba(255, 61, 61, 0.7);
     margin: 20px 0px;
-    padding: 10px 13px 35px;
+    padding: 10px 13px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    background-image: url(../assets/images/band-desc-bg.png);
+    background-image: url('../assets/images/band-desc-bg.png');
     background-size: cover;
     background-position: center;
 }
