attempt at fixing about desc image

--- a/css/about.css
+++ b/css/about.css
@@ -13,7 +13,7 @@
     padding: 10px 13px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    background-image: url('../assets/images/band-desc-bg.png');
+    background-image: url('../assets/images/bandDesc.png');
     background-size: cover;
     background-position: center;
 }
