--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.body {
+    background-color: #000;
+}
+
+
 
 /* Navbar */
 .navbar {
@@ -1191,7 +1196,7 @@ footer {
             text-align: center;
             margin: 40px 0;
             padding: 40px;
-            background: linear-gradient(135deg, #f9c6d3, #f6a4b1); /* Soft pastel pinks for warmth */
+            background: linear-gradient(135deg, #ffd4c4, #fea382); /* Soft pastel orange for warmth */
             color: #fff;
             border-radius: 25px; /* Rounded corners for the section */
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05); /* Light shadow for depth */
