--- a/css/style.css
+++ b/css/style.css
@@ -1255,52 +1255,28 @@ footer {
             transform: translateY(-3px);
             box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
         }
-       .heart {
-    position: fixed;
-    bottom: 0;
-    width: 30px;
-    height: 30px;
-    background-color: #ff6a3d;
-    opacity: 0.8;
-    transform: rotate(45deg); /* Rotate to form the heart shape */
-    animation: float 5s ease-in-out infinite;
-    z-index: 9999;
-    pointer-events: none;
-    margin-left: -15px;
-    margin-top: -15px;
+	/* customizable heart styling */
+	.heart {
+        color: #800000;
+        font-size: 2em;
+        font-family: Arial, sans-serif;
+        text-shadow: 0 0 5px #ffffff;
+      }
+      
+  
+      @-webkit-keyframes hearts-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes hearts-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes hearts-fall{0%{top:-10%}100%{top:100%}}@keyframes hearts-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.heart{position:fixed;top:-10%;z-index:9999;-webkit-animation-name:hearts-fall,hearts-shake;animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:hearts-fall,hearts-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.heart:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.heart:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.heart:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.heart:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.heart:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.heart:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.heart:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.heart:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.heart:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.heart:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.heart:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.heart:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
+      /* Initially hide the hearts */
+.hearts {
+    display: none;
+    /* Optional styles for heart */
+    font-size: 24px;
+    color: red;
+    margin: 5px;
 }
 
-.heart::before,
-.heart::after {
-    content: "";
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    background-color: #ff6a3d;
-    border-radius: 50%;
-}
-
-.heart::before {
-    left: 0; /* Left lobe */
-    top: 0;
-}
-
-.heart::after {
-    right: 0; /* Right lobe */
-    top: 0;
-}
-
-@keyframes float {
-    0% {
-        transform: translateY(0) rotate(45deg) scale(1);
-        opacity: 0.8;
-    }
-    50% {
-        transform: translateY(-50vh) rotate(45deg) scale(1.2);
-        opacity: 1;
-    }
-    100% {
-        transform: translateY(-100vh) rotate(45deg) scale(0.8);
-        opacity: 0;
-    }
+/* You can adjust the styling of individual hearts if needed */
+.heart {
+    font-size: 24px;
+    color: red;
+    margin: 5px;
 }
